Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn (JDK >= 1.5 only)
=======================

 o r17581 C-client library: 
          Introduced Timestamp.c for thread safe requestId counter
	  CallbackServer responseListener handling is now mutex protected
	  cb->removeResponseListener added as MsgRequestInfoP is on stack (still race condition is possible!!!)

 o r17576 Changed I_Queue interface to use List<I_Entry> instead of ArrayList

 o r17575 New persistency: All DB access is going now over XBDatabaseAccessorDelegate

 o r17564 Fixed ClassCastException in MsgQueuePublishEntry.getReceiver()

 o r17553 C++ client library: Bug fix for not calling postSend() in case of catch(...) and not handled by client code

 o r17532 C-client library: Fixed pthread_t initialization in Timeout.c (used by new HelloWorld4.c only)
          Fixed compiler warnings for intel icc


Changes for 1.6.4 [2008-11-18] r17524 'JDK14-GoodBye'
=====================================================

 o r17427 JDBC Database layer: Ported StorageId to new XBSTORE table, change for xb_entries (revert to r17426 on problems)

 o r17377 Sending cluster connection info with heartbeat XML mail
          <connection clusterId='avalon' id='heron'><session id='1'><state>POLLING</state><queue relating='connection' numOfEntries='24' maxNumOfEntries='10000000' numOfBytes='57600' maxNumOfBytes='2147483647'/>...

 o r17372 Cluster SSL callback tunnel: fixed client side connectionState transition
          Added EventPlugin support for cluster client connectionState:
	   "client/[subjectId]/session/[publicSessionId]/event/connectionState"

 o r17366 Added DDL for SQLServer 2005 and 2008 for new storage plugin 'JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,...'
          Does not support 2000, you would need to configure TEXT and IMAGE instead of VARCHAR(MAX) and VARBINARY(MAX)
