@@ -203,9 +203,12 @@ MsgDistributorPlugin/defaultPlugin=undef,1.0
 # Server side plugins to store single messages persistently 'msgUnitStore'
 # Server side setup to recover topics after a server crash 'topicStore'
 
+# Switch to old persistence layer with (see http://www.xmlblaster.org/xmlBlaster/doc/requirements/queue.jdbc.html):
+#JdbcStorage[XXXXX]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+
 # Settings for the persistence plugins (StoragePlugin and QueuePlugin) for POSTGRES
 #
-JdbcStorage[postgres]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[postgres]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                       url=jdbc:postgresql://localhost:5432/test,\
                       user=postgres,\
                       password=,\
@@ -218,7 +221,7 @@ JdbcStorage[postgres]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,
 
 # Settings for the persistence plugins (StoragePlugin and QueuePlugin) for ORACLE
 #
-JdbcStorage[Oracle]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[Oracle]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                     url=jdbc:oracle:thin:@localhost:1521:xmlb,\
                     user=xmlblaster,\
                     password=secret,\
@@ -232,7 +235,7 @@ JdbcStorage[Oracle]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
 # DB2 express C 9.1, using com.ibm.db2.jcc.DB2Driver
 # db2 create database xmlblast
 # db2 connect to xmlblast user db2inst1
-JdbcStorage[DB2]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[DB2]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                     url=jdbc:db2://linux:50001/xmlblast,\
                     user=db2inst1,\
                     password=secret,\
@@ -245,7 +248,7 @@ JdbcStorage[DB2]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
 
 # Settings for the persistence plugins (StoragePlugin and QueuePlugin)
 # for FIREBIRD http://www.ibphoenix.com/
-JdbcStorage[Firebird]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[Firebird]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                       url=jdbc:firebirdsql:localhost/3050:c:/Firebird/Data/mydb.fdb,\
                       user=user,\
                       password=password,\
@@ -258,7 +261,7 @@ JdbcStorage[Firebird]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,
 
 # Settings for the persistence plugins (StoragePlugin and QueuePlugin)
 # for Microsoft SQL server:
-JdbcStorage[MicrosoftSQLServer]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[MicrosoftSQLServer]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                   url=jdbc:microsoft:sqlserver://localhost:1433;SelectMethod=cursor;DatabaseName=xmlBlaster,\
                   user=sa,\
                   password=,\
@@ -272,7 +275,7 @@ JdbcStorage[MicrosoftSQLServer]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTa
 
 # Settings for the persistence plugins (StoragePlugin and QueuePlugin)
 # for Microsoft SQL Server 2005 JDBC (sqljdbc.jar Version 1.0 and earlier):
-#JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+#JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
 #                  url=jdbc:sqlserver://localhost:1433/database=xmlBlaster,\
 #                  user=sa,\
 #                  password=xxx,\
@@ -289,7 +292,7 @@ JdbcStorage[MicrosoftSQLServer]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTa
 # with driver class com.microsoft.sqlserver.jdbc.SQLServerDriver
 # Use this for SQLServer 2000 and 2005!
 # If you use v1.1 please remove the adaptive setting
-JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                   url=jdbc:sqlserver://localhost:1433;responseBuffering=adaptive;databaseName=xmlBlaster,\
                   user=sa,\
                   password=xxx,\
@@ -322,7 +325,7 @@ JdbcStorage[MicrosoftSQLServer2005]=org.xmlBlaster.util.queue.jdbc.JdbcQueueComm
 # http://jtds.sourceforge.net/faq.html#driverImplementation
 # Add jtds-1.2.2.jar to your CLASSPATH
 # net.sourceforge.jtds.jdbc.Driver
-JdbcStorage[MicrosoftSQLServerJTDS]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[MicrosoftSQLServerJTDS]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                   url=jdbc:jtds:sqlserver://localhost:1433/xmlBlaster,\
                   user=sa,\
                   password=xxx,\
@@ -340,7 +343,7 @@ JdbcStorage[MicrosoftSQLServerJTDS]=org.xmlBlaster.util.queue.jdbc.JdbcQueueComm
 # DB is created in users home tmp directory, e.g. "/home/joe/tmp/xmlBlaster_192_168_1_4_3412.*"
 # The term "$_{xmlBlaster_uniqueId}" is replaced by JdbcConnectionPool.java to a unique ID
 # for every server or client instance if not given explicitly.
-JdbcStorage[HSQLDatabaseEngine]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[HSQLDatabaseEngine]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                   url=jdbc:hsqldb:${user.home}${file.separator}tmp${file.separator}$_{xmlBlaster_uniqueId},\
                   user=sa,\
                   password=,\
@@ -351,7 +354,7 @@ JdbcStorage[HSQLDatabaseEngine]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTa
                   entriesTableName=ENTRIES,\
                   dbAdmin=true
 
-JdbcStorage[ldbc]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[ldbc]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                     url=jdbc:ldbc:postgresql://localhost/test,\
                     user=postgres,\
                     password=,\
@@ -372,7 +375,7 @@ JdbcStorage[ldbc]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
 #export LD_LIBRARY_PATH=/opt/sqlite-bin/lib
 #SQLite.JDBCDriver
 #file:/opt/j2sdk1.4.1/jre/lib/ext/sqlite.jar!/SQLite/JDBCDriver.class  + commons-codec.jar (Base64)
-JdbcStorage[SQLite]=org.xmlBlaster.util.queue.jdbc.JdbcQueueCommonTablePlugin,\
+JdbcStorage[SQLite]=org.xmlBlaster.util.queue.jdbc.JdbcQueue,\
                       url=jdbc:sqlite:/${user.home}${file.separator}tmp${file.separator}$_{xmlBlaster_uniqueId}.db,\
                       user=sqlite,\
                       password=,\
